F&GDEV/src/objects/Fund_Code__c.object
<CustomObject>
    <description>Object utilized for Product Development efforts</description>
    <fields>
        <fullName>DJ_Index_Option__c</fullName>
        <label>DJ Index Option</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Index_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Index Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Index__c</fullName>
        <label>External Index</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>External_Index_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Barclays</fullName>
                </value>
                <value>
                    <fullName>DJIA</fullName>
                </value>
                <value>
                    <fullName>DJREIT</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>LBMA</fullName>
                </value>
                <value>
                    <fullName>SP500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fund_Type__c</fullName>
        <label>Fund Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1YDA</fullName>
                </value>
                <value>
                    <fullName>1YGT</fullName>
                </value>
                <value>
                    <fullName>1YGTF</fullName>
                </value>
                <value>
                    <fullName>1YMA</fullName>
                </value>
                <value>
                    <fullName>1YMAS</fullName>
                </value>
                <value>
                    <fullName>1YMPTP</fullName>
                </value>
                <value>
                    <fullName>1YMPTPF</fullName>
                </value>
                <value>
                    <fullName>1YPTP</fullName>
                </value>
                <value>
                    <fullName>1YPTPF</fullName>
                </value>
                <value>
                    <fullName>1YPTPP</fullName>
                </value>
                <value>
                    <fullName>2YDA</fullName>
                </value>
                <value>
                    <fullName>2YMA</fullName>
                </value>
                <value>
                    <fullName>2YMPTP</fullName>
                </value>
                <value>
                    <fullName>2YPTP</fullName>
                </value>
                <value>
                    <fullName>3YMA</fullName>
                </value>
                <value>
                    <fullName>3YMAS</fullName>
                </value>
                <value>
                    <fullName>3YMPTP</fullName>
                </value>
                <value>
                    <fullName>3YPTP</fullName>
                </value>
                <value>
                    <fullName>5YPTP</fullName>
                </value>
                <value>
                    <fullName>HWM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestCreditingMethodCode__c</fullName>
        <label>InterestCreditingMethodCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestCreditingStrategyCode__c</fullName>
        <label>InterestCreditingStrategyCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyDB_ID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyDB_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <label>Plan Code</label>
        <referenceTo>PD_Plan_Code__c</referenceTo>
        <relationshipLabel>Fund Codes</relationshipLabel>
        <relationshipName>Fund_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SP_Index_Option__c</fullName>
        <label>SP Index Option</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Fund Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan_Code__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>DJ_Index_Option__c</columns>
        <columns>SP_Index_Option__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Fund Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>